--- a/style.css
+++ b/style.css
@@ -308,7 +308,27 @@ body {
 }
 
 @media (max-width: 1024px) {
-  .container {
+  .container  {
     width: 90%;
   }
+}
+@media (max-width: 992px) {
+  .container {
+    flex-direction: column;
+  }
+  .profile {
+
+  }
+  .resume {
+
+  }
+}
+@media (max-width: 768px) {
+  
+}
+@media (max-width: 567px) {
+  
+}
+@media (max-width: 480px) {
+  
 }
