--- a/style.css
+++ b/style.css
@@ -316,11 +316,16 @@ body {
   .container {
     flex-direction: column;
   }
+  .profile-preavatar {
+    background-color: #fff;
+    border-radius: 0 0 20% 20%;
+    width: 100%;
+  }
   .profile-avatar {
-  width: 360px;
-  margin: auto;
-  border-radius: 50%;
-  margin-top: 20px;
+    width: 350px;
+    margin: auto;
+    border-radius: 0 0 20% 20%;
+  /*margin-top: 20px;*/
   }
   .resume {
 
