--- a/style.css
+++ b/style.css
@@ -332,10 +332,15 @@ body {
   }
 }
 @media (max-width: 768px) {
-  
+  .resume-wrap {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
-@media (max-width: 567px) {
-  
+@media (max-width: 660px) {
+  .lines {
+    display: none;
+  }
 }
 @media (max-width: 480px) {
   
