--- a/style.css
+++ b/style.css
@@ -335,15 +335,19 @@ body {
   }
 }
 @media (max-width: 768px) {
+  .container {
+    width: 80%;
+  }
   .resume-wrap {
     padding-left: 20px;
     padding-right: 20px;
   }
-}
-@media (max-width: 660px) {
   .lines {
     display: none;
   }
+}
+@media (max-width: 660px) {
+  
 }
 @media (max-width: 480px) {
   
