--- a/style.css
+++ b/style.css
@@ -355,6 +355,9 @@ body {
     margin-left: 8px;
     margin-right: 8px;
   }
+  .about-contacts-item {
+  display: none;
+  }
 }
 @media (max-width: 480px) {
   .logo {
